tests/NormalTests/paczka1/small_fuzzy/66555272.err
Error in line 1: lyPjmu9yDHX A522 26,2
Error in line 7: ATLf A522 58,2
Error in line 12: ATLf A176 18,1
